# market-horizon

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  app.py  docker-compose.yml  market_horizon.toml.example  pyproject.toml  uat.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
assets/: finance-explanations.md
src/market_horizon/: __init__.py  asset_types.py
src/market_horizon/analytics/: __init__.py  metrics.py
src/market_horizon/config/: __init__.py  settings.py
src/market_horizon/data/: __init__.py  provider.py  yfinance_provider.py
src/market_horizon/db/: __init__.py  models.py  repository.py  session.py
src/market_horizon/services/: sync.py
src/market_horizon/ui/: app.py
tests/: test_analytics_metrics.py  test_asset_types.py  test_repository_sync.py  test_ui_watchlist.py  test_yfinance_provider.py
