[project]
name = "market-horizon"
version = "0.1.0"
description = "Local-first financial market dashboard for stocks, ETFs, and cryptocurrencies."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "alembic>=1.13",
    "numpy>=1.26",
    "pandas>=2.2",
    "plotly>=5.22",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "streamlit>=1.36",
    "yfinance>=0.2.40",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = []

[[tool.mypy.overrides]]
module = ["pandas.*", "yfinance.*", "plotly.*", "streamlit.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src/market_horizon --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
